<?xml version="1.0"?>
<package>
  <name>mobility_base_tools</name>
  <version>0.0.1</version>
  <description>
    Tools for the Dataspeed Inc. Mobility Base
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_tools</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <!-- Mobility Base SDK -->
  <run_depend>mobility_base_common</run_depend>

  <!-- Diagnostic GUI -->
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
